# arc-bytes

./: Cargo.toml  README.md
.github/workflows/: tests.yml
.rustme/: docs.md  header.md
coverage/: index.html
coverage/src/: index.html  lib.rs.html  serde.rs.html
main/: crates.js  search-index.js  settings.html  source-files.js
main/arc_bytes/: all.html  fn.print_bytes.html  index.html  sidebar-items.js  struct.ArcBytes.html  struct.Iter.html  struct.OwnedBytes.html
main/arc_bytes/serde/: index.html  sidebar-items.js  struct.Bytes.html  struct.CowBytes.html
main/implementors/core/borrow/: trait.Borrow.js
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
main/implementors/core/convert/: trait.AsRef.js  trait.From.js
main/implementors/core/default/: trait.Default.js
main/implementors/core/fmt/: trait.Debug.js
main/implementors/core/hash/: trait.Hash.js
main/implementors/core/iter/traits/iterator/: trait.Iterator.js
main/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
main/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/implementors/serde/de/: trait.Deserialize.js
main/implementors/serde/ser/: trait.Serialize.js
main/implementors/std/io/: trait.Read.js
main/src/arc_bytes/: lib.rs.html  serde.rs.html
src/: lib.rs  serde.rs
xtask/src/: main.rs
(+1 files in other folders)
