[package]
name = "arc-bytes"
version = "0.2.0"
edition = "2021"
description = "A reference-counted byte buffer."
repository = "https://github.com/khonsulabs/arc-bytes"
license = "MIT OR Apache-2.0"
keywords = ["serde", "bytes"]
categories = ["data-structures"]
readme = "./README.md"

[features]
default = ["serde"]

[dependencies]
serde = { version = "1", optional = true }
thiserror = "1"

[dev-dependencies]
pot = { version = "1.0.0-rc.3" }
serde_json = "1"

[workspace]
members = ["xtask"]

[package.metadata.docs.rs]
all-features = true
